# lol

./: YouTubeDownloader_Part1.pyw  pubspec.yaml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/practwice/timer/: MainActivity.java  TimerNotificationService.java
android/app/src/main/res/layout/: floating_timer.xml
lib/: flutter_interaction.dart  main.dart  platform_specifics.dart  windows_floating_window.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  floating_window_plugin.cpp
